fixed window dragging off screen and other minor tweaks

--- a/web/ugahacks-7/styles/NavBar.module.css
+++ b/web/ugahacks-7/styles/NavBar.module.css
@@ -1,11 +1,19 @@
 .flex_container {
+    height: 100vh;
+    width: 100vw;
+}
+
+.navbar_container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    position: absolute;
-    top: 25px;
-    left: 0;
-    z-index: auto;
+    position: fixed;
+    top: -7vh;
+    left: 25px;
     height: 80vh;
     width: 15vw;
+}
+
+.window.container {
+    width: 100%;
 }
