--- a/web/ugahacks-7/styles/NavIconButton.module.css
+++ b/web/ugahacks-7/styles/NavIconButton.module.css
@@ -1,19 +1,21 @@
-.container {
+.iconContainer {
     margin-right: auto;
     margin-left: auto;
     margin-top: 5vh;
     padding: 0%;
+    width: 50vw;
 }
 
 .icon {
-    background-color: transparent;
-    border: none;    
+    background: none;
+    border: none !important;    
     outline: none;
-    margin: 0%;
-    padding: 0%;
+    margin: 0;
+    padding: 0;
+    box-shadow: none;
 }
 .caption {
-    margin: 0%;
+    margin: 0 auto;
     padding: 0%;
-    text-align: center;
+    display: block;
 }
