--- a/web/ugahacks-7/styles/Window.module.css
+++ b/web/ugahacks-7/styles/Window.module.css
@@ -2,6 +2,11 @@
   background: linear-gradient(90deg, navy, #53bdf8);
 }
 
+.draggable_container {
+  height: calc(100vh - 10px);
+  padding: 10px;
+}
+
 .url {
   font-size: 1.25em;
 }
