--- a/web/ugahacks-7/styles/splash.module.css
+++ b/web/ugahacks-7/styles/splash.module.css
@@ -3,23 +3,22 @@
     position: fixed;
     width: 100%;
     min-height: 100%;
-    padding-bottom: 5vh;
+    padding-bottom: 1vh;
 }
 
 .border {
     height: 100%;
     width: 100%;
-    background-color: #ee789d;
+    background-color: #2D0320;
     background-size: 100%;
-    border: .5vh solid #000;
-    padding: 8vh;
 }
 
 .main {
-    background-image: url("../public/splash2-01.svg");
+    background-image: url("../public/logo_background.png");
     background-repeat: no-repeat;
     background-position:center;  /*should be changed to right when nav added*/  
     /**background-size: 80% 100%;*/
+    background-size: cover;
     height: 100%;
     width:100%;
     max-width: 100%;
